# swiftbar_plugins

./: .eslintrc.json  .gitignore  CLAUDE.md  aafees-deals.1d.py  aafesDOTD.3600m.js  aafesDeals.1d.js  aafesDeals.js  airport-wx.py  bball.1d.py  bball.py  bnd.12h.py  cprt.1d.py  daily_news_uv.2hr.py  discourse_tops.120m.py  e_tools.6hr.py  hello.py  hn_front.120m.py  home_comps_uv.8hr.py  jsSwiftBar.60m.js  jsSwiftBar.js  justfile  lobsters.120m.py  market_indices_uv.30m.py  medical.120m.py  metar.5m.rb  microcenter.3600m.js  microcenter_deals_uv.6hr.py  news.6hr.py  pyproject.toml  reddit-jsdom.60m.js  reddit.45m.py  reddit2.120m.js  requirements.in  requirements.txt  sample_result.html  steamDeals.60m.js  stl_news.6hr.py  stl_today_news.6hr.py  stl_today_news_uv.6hr.py  tech_news.py  (+4 more)
.inactive/: medical.120m.py  reddit-jsdom.60m.js  reddit.45m.py  reddit2.120m.js  steamDeals.60m.js  swiftbar_download_wrapper.12hr.sh
plan/: idea_list.md
tests/: article_snippet.html
