[project]
name = "swiftbar-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "avwx-engine>=1.9.4",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]
